css/main.css
/* Animation keyframes */
@-webkit-keyframes theyseemerollin {
    0% {transform: rotate(0deg);}
    33% {transform: rotate(130deg);}
    66% {transform: rotate(230deg);}
    100% {transform: rotate(360deg);}
}
@keyframes theyseemerollin {
    0% {transform: rotate(0deg);}
    33% {transform: rotate(130deg);}
    66% {transform: rotate(230deg);}
    100% {transform: rotate(360deg);}
}


/* Generic style */

body {
    margin: 0px;
}

section {
    display: none;
    overflow: hidden;
    width:75%;
    margin:auto;
    font-family:"Lato";
}

#placeholder {
    height:96px;
}

section h2 {
    text-align:center;
    padding:30px;
    font-size:170%;
}

a, a:visited {
    color:#5c5c5c;
    text-decoration:none;
}

a:hover {
    text-decoration:underline;
}

/* Logo base */

.letter {
    width:150px;
    height:150px;
    background:black;
    border-radius:100px;
    color:white;
    font-family:'Lobster Two';
    text-align:center;
    font-size:700%;
    float:left;
}

.name {
    font-family:'Raleway';
    font-size:350%;
    padding-top:8px;
    padding-left:20px;
    letter-spacing:1.5px;
    font-weight: 300;
    color:black;
}

/* Loading screen */

#loading {
    display: block;
    height: 100vh;
}

#loading .logo {
    width:150px; 
    height:150px;
    margin:auto;
    padding-top:16%;
    padding-bottom: 15%;
}

#loading .letter {
    -webkit-animation: theyseemerollin 1.5s linear infinite;
    animation: theyseemerollin 1.5s linear infinite;
}

#loading .name {
    opacity: 0;
    overflow: hidden;
}

/* Navbar style */

#navbar {
    width:75%;
    padding-top:10px;
    padding-right:12.5%;
    padding-left:12.5%;
    padding-bottom:10px;
    font-family:"Roboto";
    box-shadow:0px 2px 5px black;
    position:fixed;
    background:white;
}

#navbar .logo {
    float:left;
}

#navbar .letter {
    width:70px;
    height:70px;
    font-size:320%;
}

#navbar .name {
    font-size:150%;
    padding-left:80px;
}

#navbar ul {
    display:inline;
    font-size:150%;
    float:right;
}

#navbar li {
    display:inline;
    padding-left:20px;
}

#navbar a:hover {
    text-decoration:none;
}

/* Head style */

#head {
    background:#6AAA94;
    width:75%;
    padding-top:10px;
    padding-bottom:30px;
    padding-right:12.5%;
    padding-left:12.5%;
}

#head h1 {
    text-align: center;
    font-size: 300%;
    color: white;
    font-weight: 200;
    margin-bottom: 20px;
}

#head .subtitle {
    height: 30px;
    font-size: 30px;
    color: white;
    text-align: center;
}

/* About style */

#about .photo {
    width:200px;
    height:200px;
    border-radius:100%;
    background:url('../assets/people/me.jpg');
    background-size:100% !important;
    float:left;
    margin-right:20px;
}

/* Recommendations style */

#recommendations {
    float: none;
    height: 100%;
}


#recommendations img {
    width:8%;
    margin-right:20px;
    border-radius:100%;
}

#recommendations div {
    display:inline-block;
    margin-bottom:20px;
}

#recommendations .person {
    text-align:right;
    font-style:italic;
    padding-right:10px;
}

#recommendations div:nth-child(2n) img {
    float:left;
}

#recommendations div:nth-child(2n+1) img {
    float:right;
}

#recommendations div:nth-child(2n+1) .person {
    padding-right: 100px;
}

/* Experiences style */

#experiences article {
    width:23%;
    display:inline-block;
    margin-left:10px;
    margin-right:10px;
    vertical-align:top;
    text-align:center;
}

#experiences article img {
    width:100%;
    height:100%;
}

#experiences article div {
   /* I'm containing an image! */
    height: 200px; /* Fixed height so the text is at the same level for each block */
}

